move arrows fixing overflow fixing

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -21,8 +21,11 @@ $col-acc: #e84855;
 body {
 	font-family: $font-sec;
 	font-weight: 400;
+}
+.site-wrapper {
 	overflow-x: hidden;
 }
+
 h1,
 h2,
 h4,
